Fix Android URL encoding crash